--- a/index.html
+++ b/index.html
@@ -169,82 +169,175 @@
 
     <!-- main starts -->
     <main class="container">
-      <section class="text-center my-5 py-5">
-        <h2 class="display-6 fw-bold pt-5">The Legal Practice Area</h2>
-        <p class="mt-4 pb-3">
-          A legal practice area is a specific field of law that a lawyer or law
-          firm specializes in.
-          <br />
-          There are many more legal practice areas, each with its own set of
-          laws.
-        </p>
-        <div class="row mt-5">
-          <col-12 class="col-md-6 col-lg-4 p-5 border-bottom">
-            <img src="images/business.png" />
-            <h3 class="mt-4 fw-bold h2">Business Law</h3>
-            <p class="mt-4 mb-5">
-              Business law is a broad field of law that deals with the legal
-              issues and regulations related to businesses and commercial
-              transactions.
+        <section class="text-center my-5 py-5">
+            <h2 class="display-6 fw-bold pt-5">The Legal Practice Area</h2>
+            <p class="mt-4 pb-3">
+            A legal practice area is a specific field of law that a lawyer or law
+            firm specializes in.
+            <br />
+            There are many more legal practice areas, each with its own set of
+            laws.
             </p>
-            <button class="btn primary-btn rounded-circle text-white">
-              <i class="fa-solid fa-arrow-right"></i>
-            </button>
-          </col-12>
-          <col-12 class="col-md-6 col-lg-4 border bg-secondary-subtle p-5">
-            <img src="images/criminal.png" />
-            <h3 class="mt-4 fw-bold h2">Criminal Law</h3>
-            <p class="mt-4 mb-5">
-              This area of law deals with crimes and their punishments. Lawyers
-              in this field represent clients who have been charged with crimes.
-            </p>
-            <button class="btn primary-btn rounded-circle text-white">
-                <i class="fa-solid fa-arrow-right"></i>
-              </button>
-          </col-12>
-          <col-12 class="col-md-6 col-lg-4 p-5 border-bottom">
-            <img src="images/child.png" />
-            <h3 class="mt-4 fw-bold h2">Child Support</h3>
-            <p class="mt-4 mb-5">
-                Child support is a payment made by a non-custodial parent to a custodial parent for the financial support of their child or children.
-            </p>
-            <button class="btn primary-btn rounded-circle text-white">
-              <i class="fa-solid fa-arrow-right"></i>
-            </button>
-          </col-12>
-          <col-12 class="col-md-6 col-lg-4 p-5 border-end">
-            <img src="images/education.png" />
-            <h3 class="mt-4 fw-bold h2">Education Law</h3>
-            <p class="mt-4 mb-5">
-                Education law refers to the laws and regulations that govern the operation and administration of schools, as well as the responsibilities.
-            </p>
-            <button class="btn primary-btn rounded-circle text-white">
-              <i class="fa-solid fa-arrow-right"></i>
-            </button>
-          </col-12>
-          <col-12 class="col-md-6 col-lg-4 p-5 border-end">
-            <img src="images/divorce.png" />
-            <h3 class="mt-4 fw-bold h2">Divorce Law</h3>
-            <p class="mt-4 mb-5">
-                Divorce law refers to the legal process and requirements for ending a marriage. The laws regarding divorce state, resolving issues.
-            </p>
-            <button class="btn primary-btn rounded-circle text-white">
-              <i class="fa-solid fa-arrow-right"></i>
-            </button>
-          </col-12>
-          <col-12 class="col-md-6 col-lg-4 p-5">
-            <img src="images/business.png" />
-            <h3 class="mt-4 fw-bold h2">Tax Law</h3>
-            <p class="mt-4 mb-5">
-                Tax law refers to the laws and regulations that govern the assessment and collection of taxes. This includes federal, state, and local taxes.
-            </p>
-            <button class="btn primary-btn rounded-circle text-white">
-              <i class="fa-solid fa-arrow-right"></i>
-            </button>
-          </col-12>
-        </div>
-      </section>
+            <div class="row mt-5">
+                <col-12 class="col-md-6 col-lg-4 p-5 border-bottom">
+                    <img src="images/business.png" />
+                    <h3 class="mt-4 fw-bold h2">
+                        Business Law
+                    </h3>
+                    <p class="mt-4 mb-5">
+                    Business law is a broad field of law that deals with the legal
+                    issues and regulations related to businesses and commercial
+                    transactions.
+                    </p>
+                    <button class="btn primary-btn rounded-circle text-white">
+                    <i class="fa-solid fa-arrow-right"></i>
+                    </button>
+                </col-12>
+                <col-12 class="col-md-6 col-lg-4 border bg-secondary-subtle p-5">
+                    <img src="images/criminal.png" />
+                    <h3 class="mt-4 fw-bold h2">
+                        Criminal Law
+                    </h3>
+                    <p class="mt-4 mb-5">
+                    This area of law deals with crimes and their punishments. Lawyers
+                    in this field represent clients who have been charged with crimes.
+                    </p>
+                    <button class="btn primary-btn rounded-circle text-white">
+                        <i class="fa-solid fa-arrow-right"></i>
+                    </button>
+                </col-12>
+                <col-12 class="col-md-6 col-lg-4 p-5 border-bottom">
+                    <img src="images/child.png" />
+                    <h3 class="mt-4 fw-bold h2">
+                        Child Support
+                    </h3>
+                    <p class="mt-4 mb-5">
+                        Child support is a payment made by a non-custodial parent to a custodial parent for the financial support of their child or children.
+                    </p>
+                    <button class="btn primary-btn rounded-circle text-white">
+                    <i class="fa-solid fa-arrow-right"></i>
+                    </button>
+                </col-12>
+                <col-12 class="col-md-6 col-lg-4 p-5 border-end">
+                    <img src="images/education.png" />
+                    <h3 class="mt-4 fw-bold h2">
+                        Education Law
+                    </h3>
+                    <p class="mt-4 mb-5">
+                        Education law refers to the laws and regulations that govern the operation and administration of schools, as well as the responsibilities.
+                    </p>
+                    <button class="btn primary-btn rounded-circle text-white">
+                    <i class="fa-solid fa-arrow-right"></i>
+                    </button>
+                </col-12>
+                <col-12 class="col-md-6 col-lg-4 p-5 border-end">
+                    <img src="images/divorce.png" />
+                    <h3 class="mt-4 fw-bold h2">
+                        Divorce Law
+                    </h3>
+                    <p class="mt-4 mb-5">
+                        Divorce law refers to the legal process and requirements for ending a marriage. The laws regarding divorce state, resolving issues.
+                    </p>
+                    <button class="btn primary-btn rounded-circle text-white">
+                    <i class="fa-solid fa-arrow-right"></i>
+                    </button>
+                </col-12>
+                <col-12 class="col-md-6 col-lg-4 p-5">
+                    <img src="images/business.png" />
+                    <h3 class="mt-4 fw-bold h2">
+                        Tax Law
+                    </h3>
+                    <p class="mt-4 mb-5">
+                        Tax law refers to the laws and regulations that govern the assessment and collection of taxes. This includes federal, state, and local taxes.
+                    </p>
+                    <button class="btn primary-btn rounded-circle text-white">
+                    <i class="fa-solid fa-arrow-right"></i>
+                    </button>
+                </col-12>
+            </div>
+        </section>
       <!-- practice area ends -->
+
+      <!-- client section starts -->
+        <section class="text-center my-5">
+            <h1 class="display-6 fw-bold pt-5">
+                What Our Client Say
+            </h1>
+            <p class="mt-4 pb-3">
+                First impressions are everything, especially with text  messaging.This is your chance to reinforce the value
+                <br>
+                that you’re providing your customers and make them glad they opted in to your texts.
+            </p>
+            <div id="carouselExampleCaptions" class="carousel slide overflow-hidden mt-5">
+                <div class="carousel-indicators">
+                  <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                  <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                  <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                </div>
+                <div class="carousel-inner">
+                  <div class="carousel-item active">
+                    <img src="images/slider-1.jpg" class="d-block w-100" >
+                    <div class="carousel-caption d-none d-md-block ">
+                       <div class="mb-lg-5 pb-lg-5">
+                            <img src="images/client.png" alt="">
+                            <h3 class="text-white mt-4">
+                                Awlad Hossain
+                            </h3>
+                            <p class="text-white mb-4">
+                                UIX Designer
+                            </p>
+                            <p class="text-white">
+                                A UI/UX designer is a professional who is responsible for the design and user experience of digital products such as websites, mobile apps, and software. UI (user interface) designers focus on the visual design and layout of a product, while UX (user experience) designers focus on the overall experience of the user when interacting with the product.
+                            </p>
+                       </div>
+                    </div>
+                  </div>
+                  <div class="carousel-item">
+                    <img src="images/slider-2.jpg" class="d-block w-100" >
+                    <div class="carousel-caption d-none d-md-block">
+                        <div class="mb-lg-5 pb-lg-5">
+                            <img src="images/client.png" alt="">
+                            <h3 class="text-white mt-4">
+                                Awlad Hossain
+                            </h3>
+                            <p class="text-white mb-4">
+                                UIX Designer
+                            </p>
+                            <p class="text-white">
+                                A UI/UX designer is a professional who is responsible for the design and user experience of digital products such as websites, mobile apps, and software. UI (user interface) designers focus on the visual design and layout of a product, while UX (user experience) designers focus on the overall experience of the user when interacting with the product.
+                            </p>
+                       </div>
+                    </div>
+                  </div>
+                  <div class="carousel-item">
+                    <img src="images/slider-3.jpg" class="d-block w-100" >
+                    <div class="carousel-caption d-none d-md-block">
+                        <div class="mb-lg-5 pb-lg-5">
+                            <img src="images/client.png" alt="">
+                            <h3 class="text-white mt-4">
+                                Awlad Hossain
+                            </h3>
+                            <p class="text-white mb-4">
+                                UIX Designer
+                            </p>
+                            <p class="text-white">
+                                A UI/UX designer is a professional who is responsible for the design and user experience of digital products such as websites, mobile apps, and software. UI (user interface) designers focus on the visual design and layout of a product, while UX (user experience) designers focus on the overall experience of the user when interacting with the product.
+                            </p>
+                       </div>
+                    </div>
+                  </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                  <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                  <span class="visually-hidden">Next</span>
+                </button>
+              </div>
+        </section>
+      <!-- client section ends -->
     </main>
     <!-- main ends -->
 
