FAQ section completed

--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
                 <br>
                 that you’re providing your customers and make them glad they opted in to your texts.
             </p>
-            <div id="carouselExampleCaptions" class="carousel slide overflow-hidden mt-5">
+            <div id="carouselExampleCaptions" class="carousel slide rounded-3 overflow-hidden mt-5">
                 <div class="carousel-indicators">
                   <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
                   <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
@@ -338,6 +338,123 @@
               </div>
         </section>
       <!-- client section ends -->
+
+      <!-- FAQ section starts -->
+      <section class="pt-5">
+        <h1 class="display-6 fw-bold text-center pt-5">
+            Frequently Asked Any Questions
+        </h1>
+        <p class="text-center mt-4 pb-3">
+            A list of commonly asked questions and answers on a website about topics such as hours,
+            <br>
+            shipping and handling, product information, and return policies.
+        </p>
+
+        <div class="row mt-5">
+            <div class="col-12 col-lg-6">
+                <div class="accordion" id="accordionExample">
+                    <div class="accordion-item bg-body-secondary rounded-3 overflow-hidden border-0">
+                      <h2 class="accordion-header " id="headingOne">
+                        <button class="accordion-button bg-body-secondary" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                        <h3 class="fw-bold fs-4 py-3">
+                            1. Difference between flexbox and grid.
+                        </h3>
+                        </button>
+                      </h2>
+                      <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
+                        <div class="accordion-body">
+                            <p>
+                                Flexbox and Grid are both CSS layout modules that allow you to control the positioning and alignment of elements within a container.
+                                <br><br>
+                                Flexbox is used for one-dimensional layout, where elements are arranged in a single row or column. It is best suited for elements that are aligned in a single direction, such as a navigation bar or a list of items. Flexbox provides properties like flex-direction, justify-content, and align-items to control the layout of elements.
+                                <br><br>
+                                Grid, on the other hand, is used for two-dimensional layout, where elements are arranged in rows and columns. It is best suited for creating complex grid-based layouts such as website layouts, and provides properties like grid-template-columns, grid-template-rows, and grid-template-areas to control the layout of elements.
+                            </p>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="accordion-item mt-4 bg-body-secondary rounded-3 overflow-hidden border-0">
+                      <h2 class="accordion-header" id="headingTwo">
+                        <button class="accordion-button collapsed bg-body-secondary" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                            <h3 class="fw-bold fs-4 py-3">
+                                2. What is the purpose of media query?
+                            </h3>
+                        </button>
+                      </h2>
+                      <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
+                        <div class="accordion-body">
+                         <p>
+                            A media query is a CSS technique used to apply different styles to a web page based on the characteristics of the device or screen that is displaying the page. It allows you to create responsive designs that adapt to different screen sizes and resolutions.
+                            <br><br>
+                            The purpose of media queries is to make a website's layout and design adapt to different devices and screen sizes. By using media queries, you can apply different CSS styles to different screen widths, resolutions, and other device characteristics. This makes it possible to create a layout that looks great on a large desktop screen, and also works well on a small mobile device.
+                        </p>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="accordion-item mt-4 bg-body-secondary rounded-3 overflow-hidden border-0">
+                        <h2 class="accordion-header" id="headingThree">
+                          <button class="accordion-button collapsed bg-body-secondary" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                              <h3 class="fw-bold fs-4 py-3">
+                                  3. What is css box model and how does it works?
+                              </h3>
+                          </button>
+                        </h2>
+                        <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
+                          <div class="accordion-body">
+                            <p>
+                              A box in CSS consists of a content area, which is where any text, images, or other HTML elements are displayed. This is optionally surrounded by padding, a border, and a margin, on one or more sides. The box model describes how these elements work together to create a box as displayed by CSS.
+                              <br><br>
+                              
+                              content-box
+                              <br>
+                              The edge of the content area of the box.
+                              <br><br>
+                              padding-box
+                              <br>
+                              The edge of the padding of the box, if there is no padding on a side then this is the same as content-box.
+                              <br><br>
+                              border-box
+                              <br>
+                              The edge of the border of the box, if there is no border on a side then this is the same as padding-box.
+                              <br><br>
+                              margin-box
+                              <br>
+                              The edge of the margin of the box, if there is no margin on a side then this is the same as border-box.
+                          </p>
+                          </div>
+                        </div>
+                      </div>
+                    <div class="accordion-item mt-4 bg-body-secondary rounded-3 overflow-hidden border-0">
+                      <h2 class="accordion-header" id="headingFour">
+                        <button class="accordion-button collapsed bg-body-secondary" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
+                            <h3 class="fw-bold fs-4 py-3">
+                                4. What is Semantic tag? purpose of semantic tag.
+                            </h3>
+                        </button>
+                      </h2>
+                      <div id="collapseFour" class="accordion-collapse collapse" aria-labelledby="headingFour" data-bs-parent="#accordionExample">
+                        <div class="accordion-body">
+                            
+                            <p>
+                                The core characteristic of a semantic element is that it clearly communicated its meaning to both the developer and the browser. These elements clearly define its content. 
+                                <br>
+                                *The semantic HTML tags help the search engines and other user devices to determine the importance and context of web pages.
+                                <br>
+                                *The pages made with semantic elements are much easier to read.
+                                <br>
+                                *It has greater accessibility. It offers a better user experience.
+                            </p>
+                        </div>
+                      </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-12 col-lg-6 mt-5 mt-lg-0">
+                <img class="w-100" src="images/faq.png" alt="">
+            </div>
+        </div>
+      </section>
+      <!-- FAQ section ends -->
     </main>
     <!-- main ends -->
 
