footer section completed

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <!-- header starts -->
     <header>
       <nav class="navbar navbar-expand-lg py-5">
-        <div class="container">
+        <div class="container gx-0">
           <img src="images/logo2.png" alt="" />
           <button
             class="navbar-toggler"
@@ -99,8 +99,8 @@
               id="exampleModal"
               tabindex="-1"
               aria-labelledby="exampleModalLabel"
-              aria-hidden="true"
-            >
+              aria-hidden="true">
+
               <div class="modal-dialog">
                 <div class="modal-content">
                   <div class="modal-header">
@@ -119,8 +119,7 @@
                     <button
                       type="button"
                       class="btn btn-secondary"
-                      data-bs-dismiss="modal"
-                    >
+                      data-bs-dismiss="modal">
                       Close
                     </button>
                     <button type="button" class="btn btn-primary">
@@ -136,31 +135,22 @@
       <!-- nav ends -->
 
       <div
-        class="banner container d-flex flex-column align-items-center rounded-3"
-      >
+        class="banner container d-flex flex-column align-items-center rounded-3">
         <h1 class="text-white fw-bold display-2 text-center">
           We Provide Effective
           <br />
           Legal Solutions
         </h1>
-        <p class="text-white text-center mt-4 bg-transparent">
+        <p class="text-white text-center mt-4 mb-5">
           Effective legal solutions are those that effectively address legal
           issues or disputes
           <br />
           and achieve the desired outcome for the parties involved.
         </p>
 
-        <form class="w-75 row justify-content-center px-md-4">
-          <input
-            class="col-md-7 text-center text-md-start border-0 px-3 py-4 p-md-4 rounded-3"
-            type="text"
-            placeholder="Search your services"
-          />
-          <button
-            class="col-md-2 btn primary-btn text-white fs-4 fw-medium px-5 py-3 rounded-3 ms-md-4 mt-3 mt-md-0"
-          >
-            Search
-          </button>
+        <form class="w-75 text-center">
+          <input class="p-4 w-50 rounded-3 border-0" type="text" placeholder="Search Your Services">
+          <button class="btn primary-btn fs-4 fw-semibold text-white ms-4 px-5 py-3">Search</button>
         </form>
       </div>
       <!-- banner ends -->
@@ -340,7 +330,7 @@
       <!-- client section ends -->
 
       <!-- FAQ section starts -->
-      <section class="pt-5">
+      <section class="py-5">
         <h1 class="display-6 fw-bold text-center pt-5">
             Frequently Asked Any Questions
         </h1>
@@ -353,7 +343,7 @@
         <div class="row mt-5">
             <div class="col-12 col-lg-6">
                 <div class="accordion" id="accordionExample">
-                    <div class="accordion-item bg-body-secondary rounded-3 overflow-hidden border-0">
+                    <div class="accordion-item bg-body-tertiary rounded-3 overflow-hidden border-0">
                       <h2 class="accordion-header " id="headingOne">
                         <button class="accordion-button bg-body-secondary" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
                         <h3 class="fw-bold fs-4 py-3">
@@ -373,7 +363,7 @@
                         </div>
                       </div>
                     </div>
-                    <div class="accordion-item mt-4 bg-body-secondary rounded-3 overflow-hidden border-0">
+                    <div class="accordion-item mt-4 bg-body-tertiary rounded-3 overflow-hidden border-0">
                       <h2 class="accordion-header" id="headingTwo">
                         <button class="accordion-button collapsed bg-body-secondary" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
                             <h3 class="fw-bold fs-4 py-3">
@@ -391,7 +381,7 @@
                         </div>
                       </div>
                     </div>
-                    <div class="accordion-item mt-4 bg-body-secondary rounded-3 overflow-hidden border-0">
+                    <div class="accordion-item mt-4 bg-body-tertiary rounded-3 overflow-hidden border-0">
                         <h2 class="accordion-header" id="headingThree">
                           <button class="accordion-button collapsed bg-body-secondary" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
                               <h3 class="fw-bold fs-4 py-3">
@@ -424,7 +414,7 @@
                           </div>
                         </div>
                       </div>
-                    <div class="accordion-item mt-4 bg-body-secondary rounded-3 overflow-hidden border-0">
+                    <div class="accordion-item mt-4 bg-body-tertiary rounded-3 overflow-hidden border-0">
                       <h2 class="accordion-header" id="headingFour">
                         <button class="accordion-button collapsed bg-body-secondary" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
                             <h3 class="fw-bold fs-4 py-3">
@@ -455,8 +445,135 @@
         </div>
       </section>
       <!-- FAQ section ends -->
+
+      <!-- contact section starts -->
+      <section class="mt-5">
+        <h1 class="display-6 fw-bold text-center pt-5">
+            Contact With Us
+        </h1>
+        <p class="text-center mt-4 pb-3">
+            Need help?
+            <br>
+            Contact us for more information
+        </p>
+
+        <div class="row gx-4">
+            <div class="col-12 col-lg-6">
+                <div class="row">
+                    <div class="col-md-6 text-center border border-top-0 border-start-0 bg-body-secondary p-5">
+                        <img src="images/location.png" >
+                        <h3 class="fw-bold fs-4 my-4">Address</h3>
+                        <p>
+                            A108 Adam Street,
+                            <br>
+                            New York, NY 535022
+                        </p>
+                    </div>
+                    <div class="col-md-6 text-center border-bottom bg-body-secondary p-5">
+                        <img src="images/call.png" >
+                        <h3 class="fw-bold fs-4 my-4">Call Us</h3>
+                        <p>
+                            +88 01750 00 00 00,
+                            <br>
+                            +88 01750 00 00 00
+                        </p>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-6 text-center border border-top-0 border-start-0 bg-body-secondary p-5">
+                        <img src="images/email.png" >
+                        <h3 class="fw-bold fs-4 my-4">Email Us</h3>
+                        <p>
+                            info@gmail.com,
+                            <br>
+                            info@gmail.com
+                        </p>
+                    </div>
+                    <div class="col-md-6 text-center bg-body-secondary p-5">
+                        <img src="images/time.png" >
+                        <h3 class="fw-bold fs-4 my-4">Working Hours</h3>
+                        <p>
+                            Mon-Fri: 9AM to 5PM,
+                            <br>
+                            Sunday: 9AM to 1 PM
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-12 col-lg-6 mt-5 mt-lg-0">
+                <input class=" d-block w-100 mb-4 p-4 border-0 bg-body-secondary rounded-3" type="text" placeholder="Your Name">
+                <input class=" d-block w-100 mb-4 p-4 border-0 bg-body-secondary rounded-3" type="email" placeholder="Your Email">
+                <input class=" d-block w-100 mb-4 p-4 border-0 bg-body-secondary rounded-3" type="text" placeholder="Subject">
+                <textarea class=" d-block w-100 mb-4 p-4 border-0 bg-body-secondary rounded-3"rows="5" placeholder="Your Message"></textarea>
+                <input class="btn primary-btn d-block w-100 p-4 text-white fw-bold fs-5" type="submit" value="Send Message">
+            </div>
+        </div>
+      </section>
+      <!-- contact section ends -->
+
     </main>
     <!-- main ends -->
+
+    <!-- footer starts -->
+    <footer class="mt-5 py-5 bg-black">
+        <div class="container mt-5">
+            <div class="row justify-content-between py-5 text-center text-md-start">
+                <div class="col-12 col-md-6 col-lg-4 col-xl-3">
+                    <img src="images/logo.png">
+                    <p class="my-4">
+                        Effective legal solutions are those that effectively address legalissues or disputesand achieve the desired outcome for the parties involved.
+                    </p>
+                </div>
+                <div class="col-12 col-md-6 col-lg-4 col-xl-3">
+                    <h3 class="text-white fs-4 fw-bold">
+                        Usefull Link
+                    </h3>
+                    <ul class="list-unstyled mt-5">
+                        <li class="mb-4"><a class="text-decoration-none text-white px-2 " href="#">Home</a></li>
+                        <li class="mb-4"><a class="text-decoration-none text-white px-2 " href="#">About Us</a></li>
+                        <li class="mb-4"><a class="text-decoration-none text-white px-2 " href="#">Cases</a></li>
+                        <li class="mb-4"><a class="text-decoration-none text-white px-2 " href="#">Blog</a></li>
+                        <li class="mb-4"><a class="text-decoration-none text-white px-2 " href="#">Contact Us</a></li>
+                    </ul>
+                </div>
+                <div class="col-12 col-md-6 col-lg-4 col-xl-3 mt-5 mt-lg-0">
+                    <h3 class="text-white fs-4 fw-bold mb-5">Contact Now</h3>
+                    <p>
+                      555 4th 5t NW, Washington
+                      <br>
+                      DC 20530, United States
+                    </p>
+                    <p>
+                      +88 01750 000 000
+                      <br>
+                      +88 01750 000 000
+                    </p>
+                    <p>
+                      info@gmail.com
+                      <br>
+                      info@gmail.com
+                    </p>
+                </div>
+                <div class="col-12 col-md-6 col-lg-4 col-xl-3 mt-5 mt-lg-0">
+                  <h3 class="text-white fs-4 fw-bold mb-5">
+                    Subscribe
+                  </h3>
+                  <p>
+                    Subscribe for our latest &
+                    <br>
+                    Articles. We Won’t Give You 
+                    <br>
+                    Spam Mails
+                  </p>
+                  <form class="d-flex">
+                    <input class="w-100 p-4 rounded-3 border-0" type="email" placeholder="Email Address">
+                    <button class="btn primary-btn subscribe-btn text-white"><i class="fa-regular fa-paper-plane fs-5 p-3"></i></button>
+                  </form>
+                </div>
+            </div>
+        </div>
+    </footer>
+    <!-- footer ends -->
 
     <!-- bootstrap cdn js -->
     <script
