--- a/index.html
+++ b/index.html
@@ -57,27 +57,27 @@
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarScroll">
-            <ul class="navbar-nav mx-auto my-2 my-lg-0 mt-4 mt-lg-0">
+            <ul class="navbar-nav mx-auto my-2 my-lg-0 mt-4 mt-lg-0 ps-3 ps-md-0">
               <li class="nav-item me-4">
                 <a class="nav-link" href="#">Home</a>
               </li>
               <li class="nav-item me-4">
-                <a class="nav-link" href="#"
+                <a class="nav-link" href="#faq"
                   >Services<i class="fa-solid fa-chevron-right ms-2"></i
                 ></a>
               </li>
               <li class="nav-item me-4">
-                <a class="nav-link" href="#"
+                <a class="nav-link" href="#practice-area"
                   >Cases<i class="fa-solid fa-chevron-right ms-2"></i
                 ></a>
               </li>
               <li class="nav-item me-4">
-                <a class="nav-link" href="#"
+                <a class="nav-link" href="#stories"
                   >Blog<i class="fa-solid fa-chevron-right ms-2"></i
                 ></a>
               </li>
               <li class="nav-item me-4">
-                <a class="nav-link" href="#"
+                <a class="nav-link" href="#contact-us"
                   >Contact Us<i class="fa-solid fa-chevron-right ms-2"></i
                 ></a>
               </li>
@@ -86,7 +86,7 @@
             <!-- Button trigger modal -->
             <button
               type="button"
-              class="btn primary-btn text-white fw-medium fs-5 px-4 py-3 rounded-3"
+              class="btn primary-btn text-white fw-medium fs-5 px-4 py-3 rounded-3 ms-3 ms-md-0"
               data-bs-toggle="modal"
               data-bs-target="#exampleModal"
             >
@@ -104,8 +104,8 @@
               <div class="modal-dialog">
                 <div class="modal-content">
                   <div class="modal-header">
-                    <h1 class="modal-title fs-5" id="exampleModalLabel">
-                      Modal title
+                    <h1 class="modal-title fs-4 fw-bold" id="exampleModalLabel">
+                      Let's Discuss Your Needs
                     </h1>
                     <button
                       type="button"
@@ -114,7 +114,9 @@
                       aria-label="Close"
                     ></button>
                   </div>
-                  <div class="modal-body">...</div>
+                  <div class="modal-body">
+                    "Thank you for considering us for your needs. We understand that making a decision can be difficult, which is why we are offering a free consultation to discuss how we can help. During this consultation, we will listen to your concerns and provide you with the information you need to make an informed decision. There is no obligation or pressure to make a commitment, and we will provide you with our honest and professional opinion. Please don't hesitate to contact us to schedule your free consultation."
+                  </div>
                   <div class="modal-footer">
                     <button
                       type="button"
@@ -136,22 +138,24 @@
 
       <div
         class="banner container d-flex flex-column align-items-center rounded-3">
-        <h1 class="text-white fw-bold display-2 text-center">
-          We Provide Effective
-          <br />
-          Legal Solutions
-        </h1>
-        <p class="text-white text-center mt-4 mb-5">
-          Effective legal solutions are those that effectively address legal
-          issues or disputes
-          <br />
-          and achieve the desired outcome for the parties involved.
-        </p>
-
-        <form class="w-75 text-center">
-          <input class="p-4 w-50 rounded-3 border-0" type="text" placeholder="Search Your Services">
-          <button class="btn primary-btn fs-4 fw-semibold text-white ms-4 px-5 py-3">Search</button>
-        </form>
+        <div class="px-3 px-md-0">
+          <h1 class="text-white fw-bold display-2 text-center">
+            We Provide Effective
+            <br />
+            Legal Solutions
+          </h1>
+          <p class="text-white text-center mt-4 mb-5">
+            Effective legal solutions are those that effectively address legal
+            issues or disputes
+            <br />
+            and achieve the desired outcome for the parties involved.
+          </p>
+  
+          <form class="d-md-flex text-center">
+            <input class="w-100 p-4 rounded-3 border-0" type="text" placeholder="Search Your Services">
+            <button class="btn primary-btn fs-4 fw-semibold text-white mt-4 mt-md-0 ms-md-4 px-5 py-3">Search</button>
+          </form>
+        </div>
       </div>
       <!-- banner ends -->
     </header>
@@ -159,7 +163,7 @@
 
     <!-- main starts -->
     <main class="container">
-        <section class="text-center my-5 py-5">
+        <section class="text-center my-5 py-5" id="practice-area">
             <h2 class="display-6 fw-bold pt-5">The Legal Practice Area</h2>
             <p class="mt-4 pb-3">
             A legal practice area is a specific field of law that a lawyer or law
@@ -183,7 +187,7 @@
                     <i class="fa-solid fa-arrow-right"></i>
                     </button>
                 </col-12>
-                <col-12 class="col-md-6 col-lg-4 border bg-secondary-subtle p-5">
+                <col-12 class="col-md-6 col-lg-4 bg-secondary-subtle p-5 border">
                     <img src="images/criminal.png" />
                     <h3 class="mt-4 fw-bold h2">
                         Criminal Law
@@ -232,7 +236,7 @@
                     <i class="fa-solid fa-arrow-right"></i>
                     </button>
                 </col-12>
-                <col-12 class="col-md-6 col-lg-4 p-5">
+                <col-12 class="col-md-6 col-lg-4 p-5 ">
                     <img src="images/business.png" />
                     <h3 class="mt-4 fw-bold h2">
                         Tax Law
@@ -248,7 +252,6 @@
         </section>
       <!-- practice area ends -->
 
-      <!-- client section starts -->
         <section class="text-center my-5">
             <h1 class="display-6 fw-bold pt-5">
                 What Our Client Say
@@ -329,8 +332,7 @@
         </section>
       <!-- client section ends -->
 
-      <!-- FAQ section starts -->
-      <section class="py-5">
+      <section class="py-5" id="faq">
         <h1 class="display-6 fw-bold text-center pt-5">
             Frequently Asked Any Questions
         </h1>
@@ -446,8 +448,58 @@
       </section>
       <!-- FAQ section ends -->
 
-      <!-- contact section starts -->
-      <section class="mt-5">
+      <section class="my-5 pb-5" id="stories">
+        <h2 class="display-6 fw-bold text-center py-5">
+          Top Stories
+        </h2>
+        <div class="row gy-4">
+          <div class="col-md-6 col-lg-4">
+            <div class="card">
+              <img src="images/domistic2.jpg" class="card-img-top h-50" alt="Story 1">
+              <div class="card-body">
+                <h3 class="card-title">
+                  Victims of Domestic Abuse to Apply for Legal Status
+                </h3>
+                <p class="card-text">
+                  A new law has been passed that allows to non-citizen victims of domestic abuse to apply for legal status, regardless of whether their abuser is a citizen or not. law aims to protect victims and to of them escape abusive of the situations.
+                </p>
+                <a href="#" class="btn primary-btn fs-5 fw-semibold text-white mt-4 mt-md-0  px-3 py-2">Read More</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-6 col-lg-4">
+            <div class="card">
+              <img src="images/vote.jpg" class="card-img-top h-50" alt="Story 2">
+              <div class="card-body">
+                <h3 class="card-title">
+                  Federal Judge Strikes Voter ID Laws as Discriminatory
+                </h3>
+                <p class="card-text">
+                  A federal judge has struck down voter ID laws in a state as discriminatory, ruling that they disproportionately affect minority and low-income voters. This ruling is expected to have a significant impact on voting rights and access the polls.
+                </p>
+                <a href="#" class="btn primary-btn fs-5 fw-semibold text-white mt-4 mt-md-0  px-3 py-2">Read More</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-6 col-lg-4">
+            <div class="card">
+              <img src="images/criminal.jpg" class="card-img-top h-50" alt="Story 3">
+              <div class="card-body">
+                <h3 class="card-title">
+                  Lawmakers Pass Sweeping Criminal Justice Reforms
+                </h3>
+                <p class="card-text">
+                  Lawmakers have passed a package of criminal justice reforms, aimed at reducing mass incarceration, promoting rehabilitation, and addressing racial disparities in the criminal justice system. The bill includes provisions to reduce .
+                </p>
+                <a href="#" class="btn primary-btn fs-5 fw-semibold text-white mt-4 mt-md-0  px-3 py-2">Read More</a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- top stories section ends -->
+
+      <section class="mt-5" id="contact-us">
         <h1 class="display-6 fw-bold text-center pt-5">
             Contact With Us
         </h1>
@@ -514,14 +566,13 @@
     </main>
     <!-- main ends -->
 
-    <!-- footer starts -->
     <footer class="mt-5 py-5 bg-black">
         <div class="container mt-5">
             <div class="row justify-content-between py-5 text-center text-md-start">
                 <div class="col-12 col-md-6 col-lg-4 col-xl-3">
                     <img src="images/logo.png">
-                    <p class="my-4">
-                        Effective legal solutions are those that effectively address legalissues or disputesand achieve the desired outcome for the parties involved.
+                    <p class="my-4 text-secondary">
+                        Effective legal solutions are those that effectively address legal issues or disputes and achieve the desired outcome for the parties involved.
                     </p>
                 </div>
                 <div class="col-12 col-md-6 col-lg-4 col-xl-3">
@@ -529,26 +580,26 @@
                         Usefull Link
                     </h3>
                     <ul class="list-unstyled mt-5">
-                        <li class="mb-4"><a class="text-decoration-none text-white px-2 " href="#">Home</a></li>
-                        <li class="mb-4"><a class="text-decoration-none text-white px-2 " href="#">About Us</a></li>
-                        <li class="mb-4"><a class="text-decoration-none text-white px-2 " href="#">Cases</a></li>
-                        <li class="mb-4"><a class="text-decoration-none text-white px-2 " href="#">Blog</a></li>
-                        <li class="mb-4"><a class="text-decoration-none text-white px-2 " href="#">Contact Us</a></li>
+                        <li class="mb-4"><a class="text-decoration-none text-secondary px-2 " href="#">Home</a></li>
+                        <li class="mb-4"><a class="text-decoration-none text-secondary px-2 " href="#">About Us</a></li>
+                        <li class="mb-4"><a class="text-decoration-none text-secondary px-2 " href="#">Cases</a></li>
+                        <li class="mb-4"><a class="text-decoration-none text-secondary px-2 " href="#">Blog</a></li>
+                        <li class="mb-4"><a class="text-decoration-none text-secondary px-2 " href="#">Contact Us</a></li>
                     </ul>
                 </div>
                 <div class="col-12 col-md-6 col-lg-4 col-xl-3 mt-5 mt-lg-0">
                     <h3 class="text-white fs-4 fw-bold mb-5">Contact Now</h3>
-                    <p>
+                    <p class="text-secondary">
                       555 4th 5t NW, Washington
                       <br>
                       DC 20530, United States
                     </p>
-                    <p>
+                    <p class="text-secondary">
                       +88 01750 000 000
                       <br>
                       +88 01750 000 000
                     </p>
-                    <p>
+                    <p class="text-secondary">
                       info@gmail.com
                       <br>
                       info@gmail.com
@@ -558,7 +609,7 @@
                   <h3 class="text-white fs-4 fw-bold mb-5">
                     Subscribe
                   </h3>
-                  <p>
+                  <p class="text-secondary">
                     Subscribe for our latest &
                     <br>
                     Articles. We Won’t Give You 
@@ -566,8 +617,8 @@
                     Spam Mails
                   </p>
                   <form class="d-flex">
-                    <input class="w-100 p-4 rounded-3 border-0" type="email" placeholder="Email Address">
-                    <button class="btn primary-btn subscribe-btn text-white"><i class="fa-regular fa-paper-plane fs-5 p-3"></i></button>
+                    <input class="w-100 p-4 rounded-3 border-0 overflow-hidden" type="email" placeholder="Email Address">
+                    <button class="primary-btn subscribe-btn text-white rounded-3"><i class="fa-regular fa-paper-plane fs-5 p-3"></i></button>
                   </form>
                 </div>
             </div>
