--- a/index.html
+++ b/index.html
@@ -120,11 +120,11 @@
                   <div class="modal-footer">
                     <button
                       type="button"
-                      class="btn btn-secondary"
+                      class="btn btn-secondary fw-medium"
                       data-bs-dismiss="modal">
                       Close
                     </button>
-                    <button type="button" class="btn btn-primary">
+                    <button type="button" class="btn primary-btn text-white fw-medium">
                       Save changes
                     </button>
                   </div>
@@ -252,7 +252,7 @@
         </section>
       <!-- practice area ends -->
 
-        <section class="text-center my-5">
+        <section class="text-center my-5" id="client">
             <h1 class="display-6 fw-bold pt-5">
                 What Our Client Say
             </h1>
