--- a/index.html
+++ b/index.html
@@ -261,74 +261,65 @@
                 <br>
                 that you’re providing your customers and make them glad they opted in to your texts.
             </p>
-            <div id="carouselExampleCaptions" class="carousel slide rounded-3 overflow-hidden mt-5">
-                <div class="carousel-indicators">
-                  <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-                  <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
-                  <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
-                </div>
-                <div class="carousel-inner">
-                  <div class="carousel-item active">
-                    <img src="images/slider-1.jpg" class="d-block w-100" >
-                    <div class="carousel-caption d-none d-md-block ">
-                       <div class="mb-lg-5 pb-lg-5">
-                            <img src="images/client.png" alt="">
-                            <h3 class="text-white mt-4">
-                                Awlad Hossain
-                            </h3>
-                            <p class="text-white mb-4">
-                                UIX Designer
-                            </p>
-                            <p class="text-white">
-                                A UI/UX designer is a professional who is responsible for the design and user experience of digital products such as websites, mobile apps, and software. UI (user interface) designers focus on the visual design and layout of a product, while UX (user experience) designers focus on the overall experience of the user when interacting with the product.
-                            </p>
-                       </div>
-                    </div>
-                  </div>
-                  <div class="carousel-item">
-                    <img src="images/slider-2.jpg" class="d-block w-100" >
-                    <div class="carousel-caption d-none d-md-block">
-                        <div class="mb-lg-5 pb-lg-5">
-                            <img src="images/client.png" alt="">
-                            <h3 class="text-white mt-4">
-                                Awlad Hossain
-                            </h3>
-                            <p class="text-white mb-4">
-                                UIX Designer
-                            </p>
-                            <p class="text-white">
-                                A UI/UX designer is a professional who is responsible for the design and user experience of digital products such as websites, mobile apps, and software. UI (user interface) designers focus on the visual design and layout of a product, while UX (user experience) designers focus on the overall experience of the user when interacting with the product.
-                            </p>
-                       </div>
-                    </div>
-                  </div>
-                  <div class="carousel-item">
-                    <img src="images/slider-3.jpg" class="d-block w-100" >
-                    <div class="carousel-caption d-none d-md-block">
-                        <div class="mb-lg-5 pb-lg-5">
-                            <img src="images/client.png" alt="">
-                            <h3 class="text-white mt-4">
-                                Awlad Hossain
-                            </h3>
-                            <p class="text-white mb-4">
-                                UIX Designer
-                            </p>
-                            <p class="text-white">
-                                A UI/UX designer is a professional who is responsible for the design and user experience of digital products such as websites, mobile apps, and software. UI (user interface) designers focus on the visual design and layout of a product, while UX (user experience) designers focus on the overall experience of the user when interacting with the product.
-                            </p>
-                       </div>
-                    </div>
-                  </div>
-                </div>
-                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
-                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                  <span class="visually-hidden">Previous</span>
-                </button>
-                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
-                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                  <span class="visually-hidden">Next</span>
-                </button>
+            <div id="carouselExampleIndicators" class="carousel slide rounded-4 overflow-hidden">
+              <div class="carousel-indicators">
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
               </div>
+              <div class="carousel-inner">
+                <div class="carousel-item carousel-item-1 active">
+                  <div class="client">
+                    <img src="images/client.png" alt="">
+                    <h3 class="text-white mt-4">
+                        Awlad Hossain
+                    </h3>
+                    <p class="text-white mb-4">
+                        UIX Designer
+                    </p>
+                    <p class="text-white">
+                        A UI/UX designer is a professional who is responsible for the design and user experience of digital products such as websites, mobile apps, and software. UI (user interface) designers focus on the visual design and layout of a product, while UX (user experience) designers focus on the overall experience of the user when interacting with the product.
+                    </p>
+                  </div>
+                </div>
+                <div class="carousel-item carousel-item-2">
+                  <div class="client">
+                    <img src="images/client.png" alt="">
+                    <h3 class="text-white mt-4">
+                        Awlad Hossain
+                    </h3>
+                    <p class="text-white mb-4">
+                        UIX Designer
+                    </p>
+                    <p class="text-white">
+                        A UI/UX designer is a professional who is responsible for the design and user experience of digital products such as websites, mobile apps, and software. UI (user interface) designers focus on the visual design and layout of a product, while UX (user experience) designers focus on the overall experience of the user when interacting with the product.
+                    </p>
+                  </div>
+                </div>
+                <div class="carousel-item carousel-item-3">
+                  <div class="client">
+                    <img src="images/client.png" alt="">
+                    <h3 class="text-white mt-4">
+                        Awlad Hossain
+                    </h3>
+                    <p class="text-white mb-4">
+                        UIX Designer
+                    </p>
+                    <p class="text-white">
+                        A UI/UX designer is a professional who is responsible for the design and user experience of digital products such as websites, mobile apps, and software. UI (user interface) designers focus on the visual design and layout of a product, while UX (user experience) designers focus on the overall experience of the user when interacting with the product.
+                    </p>
+                  </div>
+                </div>
+              </div>
+              <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+              </button>
+              <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+              </button>
+            </div>
         </section>
       <!-- client section ends -->
 
